Add basic styles to Input atom

--- a/src/index.css
+++ b/src/index.css
@@ -10,6 +10,11 @@
   --transition-duration-slow: 700ms;
 
   --color-white: #ffffff;
+  --color-black: #000000;
+}
+
+* {
+  box-sizing: border-box;
 }
 
 body {
