Update path names

--- a/src/components/organisms/CardDisplay/styles.css
+++ b/src/components/organisms/CardDisplay/styles.css
@@ -1,8 +1,5 @@
 .CardDisplay {
   display: flex;
   flex-direction: column;
-}
-
-.CardDisplay > *:not(:last-child) {
-  margin-bottom: var(--vertical-spacing-large);
+  row-gap: var(--vertical-spacing-large);
 }
