--- a/src/index.scss
+++ b/src/index.scss
@@ -1,6 +1,12 @@
 :root {
   --default-border-radius: 12px;
 
+  --gutter: 24px;
+
+  --horizontal-spacing-small: 12px;
+  --horizontal-spacing-medium: 24px;
+  --horizontal-spacing-large: 36px;
+
   --vertical-spacing-small: 12px;
   --vertical-spacing-medium: 24px;
   --vertical-spacing-large: 36px;
