--- a/src/templates/Search/styles.scss
+++ b/src/templates/Search/styles.scss
@@ -2,7 +2,7 @@
   display: flex;
   flex-direction: column;
 
-  .search-box {
+  .search-bar {
     margin: 0 auto var(--vertical-spacing-large) auto;
     max-width: 500px;
   }
