Enable cursor pointer for button

--- a/src/components/molecules/Button/styles.scss
+++ b/src/components/molecules/Button/styles.scss
@@ -4,4 +4,5 @@
   color: var(--color-white);
   background-color: var(--color-black);
   padding: 0 var(--horizontal-spacing-small);
+  cursor: pointer;
 }
