Handle no results found in drink search

--- a/src/templates/Search/styles.scss
+++ b/src/templates/Search/styles.scss
@@ -1,6 +1,8 @@
 .Search {
   display: flex;
   flex-direction: column;
+  justify-content: center;
+  align-items: center;
 
   .search-bar {
     margin: 0 auto var(--vertical-spacing-large) auto;
