--- a/src/pages/DrinkDetail/styles.scss
+++ b/src/pages/DrinkDetail/styles.scss
@@ -1,39 +1,58 @@
 @import "../../styles/mixins";
 
 .DrinkDetail {
-  display: grid;
-  grid-template-areas:
-    "image"
-    "info"
-    "ingredients"
-    "instructions";
-  gap: var(--vertical-spacing-medium);
+  display: flex;
+  flex-direction: column;
   align-items: center;
+  gap: var(--vertical-spacing-medium);
 
   .image {
-    grid-area: image;
     aspect-ratio: 1 / 1;
+    max-width: 400px;
   }
 
-  .info {
-    grid-area: info;
-  }
-
-  .ingredients {
-    grid-area: ingredients;
-  }
-
-  .instructions {
-    grid-area: instructions;
+  .details-wrapper {
+    display: flex;
+    flex-direction: column;
+    gap: var(--vertical-spacing-medium);
+    width: 100%;
   }
 
   @include medium-screens {
-    margin: 0 auto;
-    grid-template-columns: repeat(3, 1fr);
-    grid-template-areas:
-      "image info info"
-      "image info info"
-      "ingredients ingredients ingredients"
-      "instructions instructions instructions";
+    --width: 60vw;
+
+    .name {
+      position: relative;
+
+      &::before,
+      &::after {
+        content: "";
+        position: absolute;
+        top: 50%;
+        width: calc((var(--width) - 100%) / 2);
+        height: 1px;
+        background-color: var(--color-black);
+      }
+
+      &::before {
+        left: 0;
+        transform: translate(
+          calc(-100% - var(--horizontal-spacing-medium)),
+          -50%
+        );
+      }
+
+      &::after {
+        right: 0;
+        transform: translate(
+          calc(100% + var(--horizontal-spacing-medium)),
+          -50%
+        );
+      }
+    }
+
+    .details-wrapper {
+      max-width: var(--width);
+    }
   }
 }
